revamp: optimize code heavily, cleanup, fix performance penalties.
remove unused files.